added watchSubmit function and form section

--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
 </head>
 <body>
 	<header>
-		<h1>"No more bad news"</h1>
-			<div class="intro"></div>
-
-
+		<h1>No more bad news</h1>
+		<div class="intro"></div>
+	</header>
+	<div class="container">
+		<form id="searchForm">
+			<input type="text" id="searchInput" placeholder="you can type something here...">
+			<button type="submit">Submit</button>
+		</form>
+		<div class="results">
+		</div>
+	</div>
 
 
 	<script src="app.js"></script>
