added displayNYTdata function and changed intro divs

--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 <body>
 	<header>
 		<h1>No more bad news</h1>
-		<div class="intro"></div>
+		<div class="intro1">whatever</div>
+		<div class="intro2">another</div>
 	</header>
 	<div class="container">
 		<form id="searchForm">
 			<input type="text" id="searchInput" placeholder="you can type something here...">
 			<button type="submit">Submit</button>
 		</form>
-		<div class="results">
+		<div id="results">
 		</div>
 	</div>
 
