--- a/index.html
+++ b/index.html
@@ -11,19 +11,29 @@
 <body>
 	<header>
 		<h1>No more bad news</h1>
-		<div class="intro1">whatever</div>
-		<div class="intro2">another</div>
+		<div class="intro1">something here</div>
+		<div class="intro2">and something here</div>
 	</header>
 	<div class="container">
 		<form id="searchForm">
-			<input type="text" id="searchInput" placeholder="you can type something here...">
+			<label for="searchInput">Search</label>
+			<input type="text" id="searchInput" placeholder="search for...">
 			<button type="submit">Submit</button>
 		</form>
+		<form id="excludedForm">
+			<label for ="excludedInput">Excluded words</label>
+			<input type="text" id="excludedInput">
+			<button type="submit">Submit</button>
+		</form>
+		<div id="excluded">
+			<h3>Excluded words</h3>
+		</div>
+		<hr>
 		<div id="results">
+			<h3>Results</h3>
 		</div>
 	</div>
 
-
-	<script src="app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
