added intro banner and little styling

--- a/index.html
+++ b/index.html
@@ -6,13 +6,29 @@
 			  src="https://code.jquery.com/jquery-3.2.1.min.js"
 			  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
 			  crossorigin="anonymous"></script>
+  <link rel="stylesheet" 
+	  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+	  integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" 
+	  crossorigin="anonymous">
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<header>
-		<h1>No more bad news</h1>
-		<div class="intro1">something here</div>
-		<div class="intro2">and something here</div>
+		<div class="banner">
+			<h1>No more "bad" news</h1>
+			<div class="introQuestions">
+				<div class="intro1">Tired of reading terrifying  news?</div>
+				<div class="intro2">Sad stories make you depressed?</div>
+				<div class="intro3">Don't want to read about world diseases?</div>
+			</div>
+			<form id="introForm">
+				<button type="submit">Continue</button>
+			</form>
+			<div class="intro4">You don't need to see all of that...</div>
+		  	<form class="startForm">
+					<button type="submit">Continue</button>
+				</form>
+		</div>
 	</header>
 	<div class="container">
 		<form id="searchForm">
