added some colors, change font size

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang='en'>
 	<head>
 		<title>New York Times</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="style.css" rel="stylesheet" type="text/css">
 		<script
 				  src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -9,7 +10,7 @@
 				  crossorigin="anonymous"></script>  
 	</head>
 	<body class="container">
-		<h1>No more "bad" news</h1>
+		<h1>No more "bad" news !!!</h1>
 		<h2 class="mobileHeader">Do you want to see only what you really want to see??</h2>
 		<h2 class="mobileContinue">Click continue</h2>
 		 <header>
