change some app.js function event

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 				  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
 				  crossorigin="anonymous"></script>  
 	</head>
+	<h1>No more "bad" news !!!</h1>
 	<body class="container">
 		<div class="mobileBanner">
 		<h1>No more "bad" news !!!</h1>
