--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 		  		<button class="previousPage" type="submit">Previous Page</button>
 					<button class="nextPage" type="submit">Next Page</button> 
 			</div>
-		<script src="app.js"></script>
+			<script src="moment.min.js"></script>
+			<script src="app.js"></script>
 	</body>
 </html>
