added image, changed fonts, added intro5

--- a/index.html
+++ b/index.html
@@ -26,12 +26,24 @@
 					<div class="intro2">Sad stories make you depressed?</div>
 					<div class="intro3">Don't want to read about world diseases?</div>
 				</div>
-			<!-- search page-->
+			<!-- search page -->
 				<form id="introForm">
 					<button class="buttonContinue" type="submit">Continue</button>
-				</form>
+				</form> 
 				<div class="intro4">You don't need to see all of that...</div>
-			  	<form class="startForm">
+					<div class="intro4">All you have to do is...</div>
+			  		<form class="startForm">
+							<button class="buttonContinue" type="submit">Continue</button>
+						</form>
+						<form class="startExpl">
+							<button class="buttonExpl" type="submit">Continue</button>
+						</form>
+			</div>
+				<div class="intro5">
+					<h2>In a search box type a keyword, after submit you'll see list of archive articles</h2>
+					<img src="NYT1.jpg">
+					<h2>In excluded  box type keyword</h2>
+					<form class="startForm">
 						<button class="buttonContinue" type="submit">Continue</button>
 					</form>
 				</div>
@@ -54,8 +66,11 @@
 				    <button class="buttonSubmit" type="submit">Submit</button>
 					</div>
 				</form>
+				<h3>Excluded words</h3>
 				<div id="excluded">
-					<h3>Excluded words</h3>
+					<div class="excludedExplain">
+						<p>&#9664 You will not see articles with these keywords in your results</p>
+					</div>
 				</div>
 			</div>
 			<hr>
