--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 	</head>
 	<body class="container">
 		<div class="mobileBanner">
-			<h1>No more "bad" news !!!</h1>
+			<h1>No more "bad" news from NYT !!!</h1>
 			<div class="mobileHeader">
 				<h2>Do you want to see only what you really want to see??</h2>
 				<h3>Step 1</h3>
-				<p>In a "Search for" box type a keyword. A single word which describes what topics are 
+				<p>In a "Search for" type a keyword. A single word which describes what topics are 
 					interested to read about</p>
 				<h3>Step 2</h3>
-				<p>In "Excluded words" box type a single word which describes topics which 
+				<p>In "Excluded words" type a single word which describes topics which 
 					you don't want to read about. We'll remove all headers with that word from 
 					results list</p>
 				<h2 class="mobileContinue">Click continue</h2>
@@ -29,7 +29,7 @@
 		</div>
 		 <header>
 			<div class="banner">
-				<h1>No more "bad" news !!!</h1>
+				<h1>No more "bad" news from The New York Times !!!</h1>
 				<div class="introQuestions">
 					<div class="intro1">Tired of reading terrifying  news?</div>
 					<div class="intro2">Sad stories make you depressed?</div>
@@ -64,7 +64,7 @@
 		</header>
 		<div class="my-container">
 			<div class="searchBoxes">
-				<h1>No more "bad" news !!!</h1>
+				<h1>No more "bad" news from The New York Times!!!</h1>
 				<form class="form-inline" id="searchForm">
 					<div class="form-group">
 						<label for="searchInput" class="inputsForm">Search for:</label>
