--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body class="container">
 		<div class="mobileBanner">
-			<h1>No more "bad" news from NYT !!!</h1>
+			<h1>No more "unwanted" news from NYT !!!</h1>
 			<div class="mobileHeader">
 				<h2>Do you want to see only what you really want to see??</h2>
 				<h3>Step 1</h3>
@@ -29,7 +29,7 @@
 		</div>
 		 <header>
 			<div class="banner">
-				<h1>No more "bad" news from The New York Times !!!</h1>
+				<h1>No more "unwanted" news from The New York Times !!!</h1>
 				<div class="introQuestions">
 					<div class="intro1">Tired of reading terrifying  news?</div>
 					<div class="intro2">Sad stories make you depressed?</div>
@@ -64,7 +64,7 @@
 		</header>
 		<div class="my-container">
 			<div class="searchBoxes">
-				<h1>No more "bad" news from The New York Times!!!</h1>
+				<h1>No more "unwanted" news from The New York Times!!!</h1>
 				<form class="form-inline" id="searchForm">
 					<div class="form-group">
 						<label for="searchInput" class="inputsForm">Search for:</label>
